--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link zur JS-Datei-->
-
+    <script type="module" src="app.js"></script>
     <title>Test Firebase</title>
 </head>
 <body>
