--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
     <title>Test Firebase</title>
 </head>
 <body>
-    <h1>Test Firebase Projekt</h1>
+    <h1>Test Firebase-Projekt</h1>
 </body>
 </html>
